refactor: Обновлены Go-структуры и эндпоинты, актуализирована Swagger-документация.
